css/styles.css
/* ... */
.popout h2,
.popout .menu-button {
  display: none;
}

.popout ul {
  display: flex;
  flex-direction: column;
}

.popout ul li a {
  font-size: 2em;
  font-weight: 600;
  line-height: 2em;
  text-decoration: none;
  color: #3a4a42;
}

.knowledge-icon-container img {
  width: 2.8em;
}

.social-media-iconlist img {
  margin: 0.5em;
}

.popout .close-button {
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.work-card img {
  width: 100%;
}

.keep-reading-button {
  display: flex;
  justify-content: center;
  margin-top: 3em;
  width: 2.5em;
  height: 2.5em;
  border: 1px solid #dfe1e6;
  border-radius: 1.25em;
  background-color: white;
}

.keep-reading-button img {
  width: 65%;
}

.popout .close-button img {
  width: 2.5em;
}

.hidden {
  display: none;
}

.headline-section {
  padding: 0 3em 0 3em;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  background-image: url(../images/header-illsutration-mobile.svg);
  background-position: center;
  background-size: 100%;
  background-repeat: no-repeat;
}

.headline-section h1 {
  font-size: 2.5em;
  font-weight: bold;
  text-align: center;
  color: #172b4d;
}

.headline-section span {
  display: block;
  color: #36b37e;
}

.paragraph-text {
  font-size: 1.2em;
  line-height: 1.5em;
  text-align: center;
  color: #172b4d;
}

.headline-section .paragraph-text {
  margin-top: 3em;
  max-width: 65ch;
}

.social-media-iconlist {
  display: flex;
  justify-content: center;
}

footer .social-media-iconlist {
  display: none;
}

.headline-section .social-media-iconlist {
  margin-top: 3em;
}

.recent-work-section {
  margin-top: 3em;
  width: 100%;
  display: flex;
  flex-direction: column;
}

.section-headline {
  padding: 0 1em;
  font-size: 2.5em;
  text-align: center;
  font-weight: bold;
  color: #172b4d;
}

.recent-work-section .section-headline::after {
  display: block;
  margin: 0.5em auto;
  content: "";
  width: 1em;
  height: 0.1em;
  background-color: #36b37e;
  border-radius: 0.25em;
}

.work-cards-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 350px));
  justify-content: center;
  grid-gap: 1.5em;
  width: 100%;
  margin: 0 auto;
  padding: 0 1.5em;
}

.work-card {
  width: 100%;
  display: flex;
  flex-direction: column;
  background-color: #ebf0ee;
  border: 1px solid #d0d9d4;
  border-radius: 0.5em;
  overflow: hidden;
}

.work-card-info {
  display: flex;
  flex-direction: column;
  padding: 0.5em;
  background-color: white;
  border-top-left-radius: 0.5em;
  border-top-right-radius: 0.5em;
}

.work-card-info h3 {
  padding: 0 1em;
  font-weight: 600;
  color: #3a4a42;
  text-align: center;
  font-size: 1.5em;
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  text-overflow: ellipsis;
  -webkit-line-clamp: 2;
}

.work-card-info ul {
  margin: 1em 0;
  display: flex;
  gap: 0.4em;
  justify-content: center;
  width: 100%;
}

.work-card-info ul li {
  font-size: 0.8em;
  font-weight: 600;
  padding: 0.8em 1em;
  background-color: #ebf0ee;
  color: #3a4a42;
  border-radius: 0.3em;
}

.green-button {
  padding: 0.8em;
  font-size: 1em;
  color: white;
  text-decoration: none;
  border: none;
  background-color: #36b37f;
  border-radius: 0.2em;
}

.green-button:hover,
.green-icon-button:hover {
  cursor: pointer;
  background-color: #36b37f;
  box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
}

.green-button:active,
.green-icon-button:active {
  background-color: #008552;
}

.work-card-info .green-button {
  margin: 0.8em auto 1em auto;
  max-width: 8em;
}

.about-me-section {
  margin-top: 3em;
  display: flex;
  flex-direction: column;
  width: 100%;
}

.about-me-header {
  padding-top: 3em;
  display: flex;
  flex-direction: column;
  background-image: url(../images/illustration-1-about-me-mobile.svg), url(../images/illustration-2-about-me-mobile.svg);
  background-position: right top, left bottom;
  background-repeat: no-repeat, no-repeat;
}

.about-me-section .paragraph-text {
  margin: 1.5em auto 0 auto;
  padding: 0 2em;
  max-width: 65ch;
  color: #42526e;
}

.about-me-section .green-button {
  max-width: 10em;
  margin: 2em auto 0 auto;
}

.about-me-cards-container {
  margin: 3em auto 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 350px));
  justify-content: center;
  grid-gap: 1.5em;
  width: 100%;
  padding: 0 1.5em;
}

.knowledge-card {
  width: 100%;
  padding: 2.5em 1em 0 1em;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #ebf0ee;
  border: 1px solid #c1c7d0;
  border-radius: 0.5em;
}

.knowledge-icon-container {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: white;
  width: 4.5em;
  height: 4.5em;
  border-radius: 2.25em;
  box-shadow: 0 1em 1em rgba(0, 0, 0, 0.1);
}

.knowledge-card h3 {
  margin-top: 3em;
  font-size: 1.5em;
  font-weight: 600;
  text-align: center;
  color: #344563;
}

.knowledge-card ul {
  width: 100%;
  min-height: 5em;
  margin: 1em 0;
  display: flex;
  align-content: space-between;
  flex-wrap: wrap;
  justify-content: center;
}

.knowledge-card ul li {
  font-size: 0.8em;
  font-weight: 600;
  padding: 0.8em 1em;
  margin: 0 0.3em;
  background-color: white;
  color: #36b37e;
  border-radius: 0.5em;
}

.contact-section {
  width: 100%;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  margin: 4em auto 0 auto;
  align-items: center;
  background-image: url(../images/illustration-contact-form.svg);
  background-position: right bottom;
  background-repeat: no-repeat;
}

.contact-section h3 {
  margin-bottom: 1em;
}

.contact-section form {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.5em;
  width: 100%;
}
/* ... */

